Fix image card center alignment

--- a/packages/_shared/assets/css/components/card.css
+++ b/packages/_shared/assets/css/components/card.css
@@ -9,6 +9,14 @@ except for when immediately preceeded by a heading */
     margin-top: 4rem;
 }
 
+/* Image
+/* ---------------------------------------------------------- */
+
+.kg-image {
+    margin-right: auto;
+    margin-left: auto;
+}
+
 /* Gallery
 /* ---------------------------------------------------------- */
 
